# jotai-transport

./: .gitignore  LICENSE  Publish.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
bench/: README.md  baseline.md  package.json  tsconfig.json
bench/src/: e2e-load.ts  fake-ws.ts  micro.bench.ts  profile.ts  store.ts  transport.test.ts
example/: README.md  index.html  package.json  run.sh  tsconfig.json
example/client/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
example/client/src/: App.tsx  main.css  main.tsx  state.ts
example/server/: Cargo.toml  README.md
example/server/src/: led.rs  main.rs
example/src/: store.ts
example/src/client/: state.ts  transport.ts
example/src/client/view/: App.tsx
example/src/server/: index.ts  store.ts
pkgs/client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
pkgs/client/src/: index.ts  main.tsx  transport.ts
pkgs/client/src/state/: state.ts  transport.ts
pkgs/client/src/view/: App.tsx
pkgs/jotai-transport/: README.md  package.json  tsconfig.json
pkgs/jotai-transport-client/: README.md  package.json
pkgs/jotai-transport-server/: README.md  package.json
pkgs/jotai-transport/src/: index.ts
pkgs/schema/: package.json  tsconfig.json
pkgs/schema/src/: index.ts  store.ts  store.zod.ts
pkgs/server/: Cargo.toml  README.md  package.json  tsconfig.json
pkgs/server/src/: atom.rs  index.ts  lib.rs  server.rs  server.ts  store.rs
pkgs/transport-server/: README.md  package.json  tsconfig.json
pkgs/transport-server/src/: index.ts
