[package]
name = "jotai-transport-example"
version = "0.3.0-dev"
edition = "2021"
description = "jotai-transport server that drives 3 GPIO LEDs on a Raspberry Pi"

[dependencies]
transport-server = { path = "../../pkgs/server", package = "jotai-transport" }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
rppal = "0.19"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 2
